FirstProject/force-app/main/default/objects/Lead/fields/Count_Of_Outreaches__c.field-meta.xml
<CustomField>
    <fullName>Count_Of_Outreaches__c</fullName>
    <label>Count Of Outreaches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>