FirstProject/force-app/main/default/objects/Lead/fields/Help_Description__c.field-meta.xml
<CustomField>
    <fullName>Help_Description__c</fullName>
    <label>Help Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>