FirstProject/force-app/main/default/objects/Lead/fields/LeadRecordType__c.field-meta.xml
<CustomField>
    <fullName>LeadRecordType__c</fullName>
    <formula>RecordType.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LeadRecordType</label>
    <type>Text</type>
</CustomField>