FirstProject/force-app/main/default/objects/Lead/fields/Outreach_Count__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Count__c</fullName>
    <label>Outreach Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>