FirstProject/force-app/main/default/objects/Lead/fields/Successful_Outreaches_Count__c.field-meta.xml
<CustomField>
    <fullName>Successful_Outreaches_Count__c</fullName>
    <label>Successful Outreaches Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>