FirstProject/force-app/main/default/objects/Lead/fields/Successful_Outreaches_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Successful_Outreaches_Percentage__c</fullName>
    <label>Successful Outreaches Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>