FirstProject/force-app/main/default/objects/Lead/recordTypes/Help_Program_Lead.recordType-meta.xml
<RecordType>
    <fullName>Help_Program_Lead</fullName>
    <active>true</active>
    <businessProcess>Customer Help Program Segment</businessProcess>
    <label>Help Program Lead</label>
</RecordType>