FirstProject/force-app/main/default/objects/Lead/recordTypes/Skill_Program_Lead.recordType-meta.xml
<RecordType>
    <fullName>Skill_Program_Lead</fullName>
    <active>true</active>
    <businessProcess>Customer Skills Program Segment</businessProcess>
    <label>Skill Program Lead</label>
</RecordType>