FirstProject/force-app/main/default/objects/Lead/validationRules/Annual_Revenue_Must_Be_Greater_Than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Annual_Revenue_Must_Be_Greater_Than_Zero</fullName>
    <active>true</active>
    <errorConditionFormula>AnnualRevenue &lt; 0</errorConditionFormula>
    <errorDisplayField>AnnualRevenue</errorDisplayField>
    <errorMessage>Annual revenue must be greater than zero</errorMessage>
</ValidationRule>