FirstProject/force-app/main/default/objects/Lead/validationRules/Num_Of_Emps_Must_Be_Greater_Than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Num_Of_Emps_Must_Be_Greater_Than_Zero</fullName>
    <active>true</active>
    <errorConditionFormula>NumberOfEmployees &lt; 0</errorConditionFormula>
    <errorDisplayField>NumberOfEmployees</errorDisplayField>
    <errorMessage>Number of employees must be greater than zero</errorMessage>
</ValidationRule>